fixed a color contrast issue in header dark mode

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -116,7 +116,7 @@
 			color: $black-void;
 		}
 		cursor: pointer;
-		border: 2px solid $bg-color;
+		border: 3px solid $bg-color;
 	}
 	&:active {
 		transform: scale(0.98);
