--- a/src/views/Landing/Header/Header.scss
+++ b/src/views/Landing/Header/Header.scss
@@ -354,6 +354,9 @@
 			.crowdFunding,
 			.opportunities,
 			.pathways {
+				h3 {
+					color: $abatross;
+				}
 				a {
 					color: $cerulean;
 				}
